# video-classification

./: flake.nix  pyproject.toml  readme.md
video_classification/: __init__.py  utils.py
